어플이 "켜져있으면" 껏다켜도 됨, 스택안쌓임

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:theme="@style/AppTheme">
         <receiver android:name=".ScreenReceiver"></receiver>
         <service android:name=".ScreenService"></service>
-        <activity android:name=".LockScreenActivity"></activity>
+        <activity android:name=".LockScreenActivity"
+            android:noHistory="true"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
