--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.suw.lockscreen">
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,10 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <receiver android:name=".ScreenReceiver"></receiver>
-        <service android:name=".ScreenService"></service>
-        <activity android:name=".LockScreenActivity"
-            android:noHistory="true"></activity>
+        <receiver
+            android:name=".RestartReceiver"
+            android:process=".remote">
+            <intent-filter>
+                <action android:name="RestartReceiver.restart"/>
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".ScreenReceiver" />
+
+        <service android:name=".ScreenService" />
+
+        <activity
+            android:name=".LockScreenActivity"
+            android:noHistory="true" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
