addmemoActivity까진 제작, data들 저장하고 불러오기 해야됨

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".memo.MemoActivity"></activity>
+        <activity android:name=".memo.MemoItemAddActivity"></activity>
+        <activity android:name=".memo.MemoActivity" />
         <activity android:name=".Login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
